--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,31 +1,13 @@
 .container {
   padding: 1.5rem;
-  header {
-    display: flex;
-    justify-content: center;
-    nav {
-      display: flex;
-      justify-content: space-around;
-      width: 50%;
-      a {
-        text-decoration: none;
-        color: @navBtnText;
-        background: @navBtnColor;
-        padding: 0.75rem 1rem;
-        border-radius: 10px;
-        &:hover {
-          background: @bg-color;
-          color: @font-color;
-        }
-      }
-    }
-  }
-  body {
+  .welcome {
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
     p {
-      font-size: 2rem;
+      font-size: 1.5rem;
+      padding: 1rem 0;
+      margin-bottom: 1rem;
     }
   }
 }
