--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,10 @@
 @import "variables";
 @import "mixins";
 @import "reset";
+@import "global";
 @import "navigation";
 @import "footer";
+@import "about";
+@import "signup";
 @import "home-page";
+@import "about";
