--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 .container {
   .header {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     nav {
       display: flex;
       justify-content: space-around;
@@ -12,11 +12,9 @@
         color: @navBtnText;
         background: @navBtnColor;
         padding: 0.75rem 1rem;
-        border-radius: 10px;
-        font-size: 1.5rem;
+        font-size: 1rem;
         &:hover {
-          background: @bg-color;
-          color: @font-color;
+          color: @hoverColor;
         }
       }
     }
