--- a/less/variables.less
+++ b/less/variables.less
@@ -4,5 +4,6 @@
 // Color palette
 @font-color: white;
 @bg-color: black;
-@navBtnColor: darkgray;
-@navBtnText: lightgray;
+@navBtnColor: black;
+@navBtnText: white;
+@hoverColor: lightgray;
