--- a/less/about.less
+++ b/less/about.less
@@ -2,7 +2,9 @@
   padding: 1.5rem;
   .about {
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
+      font-weight: 700;
+      letter-spacing: .05rem;
     }
   }
 }
