--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,10 +2,14 @@
   padding: 1.5rem;
   .welcome {
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
+      font-weight: 700;
+      letter-spacing: .05rem;
     }
     p {
-      font-size: 1.5rem;
+      font-size: 1rem;
+      font-weight: 400;
+      letter-spacing: .05rem;
       padding: 1rem 0;
       margin-bottom: 1rem;
     }
@@ -13,8 +17,8 @@
 }
 
 // Mobile design
-@media @mobile {
-  .container {
-    padding: 1rem;
-  }
-}
+// @media @mobile {
+//   .container {
+//     padding: 1rem;
+//   }
+// }
