--- a/less/signup.less
+++ b/less/signup.less
@@ -1,15 +1,16 @@
 .container {
   .signup {
-    a {
-      text-decoration: none;
-      color: @navBtnText;
-      background: @navBtnColor;
-      padding: 0.75rem 1rem;
-      border-radius: 10px;
-      font-size: 1.5rem;
-      &:hover {
-        background: @bg-color;
-        color: @font-color;
+    nav {
+      margin-bottom: 1rem;
+      a {
+        text-decoration: none;
+        color: @navBtnText;
+        background: @navBtnColor;
+        padding: 0.75rem 1rem;
+        font-size: 1rem;
+        &:hover {
+          color: @hoverColor;
+        }
       }
     }
   }
