--- a/less/signup.less
+++ b/less/signup.less
@@ -1,13 +1,12 @@
 .container {
   .signup {
     nav {
-      margin-bottom: 1rem;
+      margin: 1rem 0;
       a {
+        .font(1.2rem, 600, .05rem, 1rem);
         text-decoration: none;
         color: @navBtnText;
         background: @navBtnColor;
-        padding: 0.75rem 1rem;
-        font-size: 1rem;
         &:hover {
           color: @hoverColor;
         }
