--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,6 @@
 // Color palette
 @font-color: white;
 @bg-color: black;
-@navBtnColor: black;
-@navBtnText: white;
-@hoverColor: lightgray;
+@navBtnColor: white;
+@navBtnText: black;
+@hoverColor: gray;
