--- a/css/index.css
+++ b/css/index.css
@@ -131,34 +131,60 @@ body {
 }
 .container .header {
   display: flex;
-  justify-content: right;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 .container .header nav {
   display: flex;
   justify-content: space-around;
-  width: 50%;
+  flex-direction: row;
+  flex-wrap: nowrap;
   padding-bottom: 1rem;
 }
 .container .header nav a {
-  text-decoration: none;
-  color: white;
-  background: black;
-  padding: 0.75rem 1rem;
-  font-size: 1rem;
-}
-.container .header nav a:hover {
-  color: lightgray;
-}
-.container .footer nav {
-  margin: 3rem 0;
-}
-.container .footer nav a {
-  display: flex;
-  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  line-height: 1rem;
   text-decoration: none;
   color: black;
+  background: white;
+  padding: 0.75rem 1rem;
+  text-align: center;
+}
+.container .header nav a:hover {
+  color: gray;
+}
+@media (max-width: 500px) {
+  .container .header nav {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .container .header nav a {
+    margin: 0.5rem 0;
+  }
+}
+.container .footer nav {
+  margin-top: 2rem;
+}
+.container .footer nav a {
   font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  line-height: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: colum;
+  flex-wrap: nowrap;
+  text-decoration: none;
+  color: black;
   padding-top: 0.5rem;
+}
+.container .footer nav a:hover {
+  color: gray;
 }
 .container {
   padding: 1.5rem;
@@ -167,32 +193,59 @@ body {
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 0.05rem;
+  line-height: 1rem;
 }
 .container .signup nav {
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 .container .signup nav a {
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  line-height: 1rem;
   text-decoration: none;
-  color: white;
-  background: black;
-  padding: 0.75rem 1rem;
-  font-size: 1rem;
+  color: black;
+  background: white;
 }
 .container .signup nav a:hover {
-  color: lightgray;
+  color: gray;
 }
 .container {
   padding: 1.5rem;
+}
+.container .welcome {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .container .welcome h1 {
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 0.05rem;
+  line-height: 1.2rem;
+  margin-bottom: 1rem;
 }
 .container .welcome p {
   font-size: 1rem;
   font-weight: 400;
   letter-spacing: 0.05rem;
-  padding: 1rem 0;
+  line-height: 1.2rem;
+  margin: 0.5rem 0;
+  width: 45%;
+  padding: 1rem;
+}
+.container .welcome img {
+  width: 50%;
+  border-radius: 5px;
   margin-bottom: 1rem;
+}
+@media (max-width: 500px) {
+  .container {
+    padding: 1rem;
+  }
+  .container .welcome {
+    width: 100%;
+  }
 }
