--- a/less/about.less
+++ b/less/about.less
@@ -2,9 +2,7 @@
   padding: 1.5rem;
   .about {
     h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      letter-spacing: .05rem;
+      .font(2rem, 700, .05rem, 1rem);
     }
   }
 }
