--- a/less/footer.less
+++ b/less/footer.less
@@ -1,14 +1,17 @@
 .container {
   .footer {
+
     nav {
-      margin: 3rem 0;
+      margin-top: 2rem;
       a {
-        display: flex;
-        flex-direction: column;
+        .font(1.2rem, 600, .05rem, 1rem);
+        .flex(flex, flex-end, colum, nowrap);
         text-decoration: none;
         color: black;
-        font-size: 1.2rem;
         padding-top: .5rem;
+        &:hover {
+          color: @hoverColor;
+        }
       }
     }
   }
