--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,23 +1,29 @@
 .container {
-  padding: 1.5rem;
+  padding: 2rem;
+  h1 {
+    .font(2rem, 700, .05rem, 2rem);
+    margin-bottom: 1rem;
+    text-align: center;
+  }
   .welcome {
     width: 100%;
     .flex(flex, space-between, row, wrap);
-    h1 {
-      .font(2rem, 700, .05rem, 1.2rem);
-      margin-bottom: 1rem;
-    }
+
     p {
-      .font(1rem, 400, .05rem, 1.2rem);
-      margin: .5rem 0;
+      .font(1rem, 400, .05rem, 1.2rem);;
       width: 45%;
       padding: 1rem;
+      padding-top: 0;
     }
     img {
-      width: 50%;
+      width: 45%;
+      height: 45%;
       border-radius: 5px;
       margin-bottom: 1rem;
     }
+  }
+  .reverse {
+    flex-direction: row-reverse;
   }
 }
 
@@ -26,7 +32,19 @@
   .container {
     padding: 1rem;
     .welcome {
-      width: 100%;
+      flex-direction: column;
+      p {
+        width: 95%;
+        margin: 1rem 0;
+      }
+      img {
+        width: 100%;
+      }
+    }
+    .cave {
+      img {
+        display: none;
+      }
     }
   }
 }
