--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,13 @@
 // Mobile styling
 @mobile: (max-width: 500px);
 
+//Tablet styling
+@tablet1: (max-width: 650px);
+@tablet2: (max-width: 800px);
+
+//Larger styling
+@larger: (max-width: 1000px);
+
 // Color palette
 @font-color: white;
 @bg-color: black;
