--- a/css/index.css
+++ b/css/index.css
@@ -211,6 +211,58 @@ body {
   font-weight: 700;
   letter-spacing: 0.05rem;
   line-height: 1rem;
+  margin-bottom: 3rem;
+}
+.container .people {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.container .people img {
+  width: 65%;
+  border-radius: 5px;
+  margin: auto;
+}
+.container .people a {
+  text-decoration: none;
+  margin: auto;
+  width: 49%;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
+  line-height: 1.7rem;
+  color: black;
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+.container .people a:hover {
+  color: gray;
+}
+.container .people p {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
+  line-height: 1.7rem;
+  margin: auto;
+}
+.container .people .person {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  width: 49%;
+}
+@media (max-width: 500px) {
+  .container .people {
+    width: 95%;
+  }
+  .container .people img {
+    width: 75%;
+  }
+  .container .people .person {
+    width: 100%;
+  }
 }
 .container .signup nav {
   margin: 1rem 0;
