--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,7 +10,7 @@
     .flex(flex, space-between, row, wrap);
 
     p {
-      .font(1.5rem, 400, .05rem, 1.7rem);;
+      .font(1.5rem, 400, .05rem, 1.7rem);
       width: 45%;
       padding: 7rem 3rem;
       padding-bottom: 0;
