--- a/css/index.css
+++ b/css/index.css
@@ -211,7 +211,11 @@ body {
   font-weight: 700;
   letter-spacing: 0.05rem;
   line-height: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
+}
+.container .about p {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 .container .people {
   display: flex;
@@ -262,6 +266,124 @@ body {
   }
   .container .people .person {
     width: 100%;
+  }
+  .container .footer {
+    display: none;
+  }
+}
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  width: 40%;
+}
+.slideshow-container .mySlides {
+  display: none;
+  width: 100%;
+}
+.slideshow-container .mySlides img {
+  width: 100%;
+}
+.slideshow-container .mySlides .text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: relative;
+  bottom: 8px;
+  text-align: center;
+}
+.slideshow-container .mySlides .text p {
+  color: black;
+}
+.slideshow-container .mySlides .text a {
+  color: black;
+  text-decoration: none;
+}
+.slideshow-container .mySlides .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.slideshow-container .first {
+  display: block;
+}
+.slideshow-container .prev,
+.slideshow-container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.slideshow-container .prev:hover,
+.slideshow-container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.slideshow-container .next {
+  right: 0;
+}
+.slideshow-container .fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+.dots .dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active {
+  background-color: #717171;
+}
+.dot:hover {
+  background-color: #717171;
+}
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@media (max-width: 650px) {
+  .slideshow-container .mySlides .text p {
+    font-size: 1rem;
+  }
+  .slideshow-container .mySlides .text a {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .slideshow-container {
+    width: 60%;
+  }
+  .slideshow-container .prev,
+  .slideshow-container .next {
+    top: 25%;
   }
 }
 .container .signup nav {
