--- a/less/about.less
+++ b/less/about.less
@@ -3,7 +3,11 @@
   .about {
     h1 {
       .font(2rem, 700, .05rem, 1rem);
-      margin-bottom: 3rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      text-align: center;
+      margin-bottom: 1rem;
     }
   }
   .people {
@@ -46,6 +50,9 @@
       .person {
         width: 100%;
       }
+    }
+    .footer {
+      display: none;
     }
   }
 }
